deploy/podinfo-lb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-demo-lb
  namespace: m-demo
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metrics-demo
